--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
       </style>
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/btc.ico”>
     <link rel="stylesheet" href="/src/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
